--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 	},
 	"scripts": {
 		"start": "grunt",
-		"test": "grunt test",
-		"postinstall": "sudo ./node_modules/bower/bin/bower install --allow-root --config.interactive=false"
+		"test": "grunt test"
 	},
 	"config": {
     	"unsafe-perm":true
@@ -38,7 +37,6 @@
 		"passport-github": "~0.1.5",
 		"lodash": "~2.4.1",
 		"forever": "~0.11.0",
-		"bower": "~1.3.8",
 		"grunt-cli": "~0.1.13",
 		"glob": "~4.0.5",
 		"async": "~0.9.0",
